<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.cars.CarsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_car_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_car_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/marca_do_ve_culo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_car_model"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_car_brand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modelo_do_ve_culo"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_car_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cadastrar_ve_culo"
        app:layout_constraintEnd_toEndOf="@+id/il_car_model"
        app:layout_constraintStart_toStartOf="@+id/il_car_model"
        app:layout_constraintTop_toBottomOf="@+id/il_car_model" />

    <Button
        android:id="@+id/del_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/apagar_ve_culo"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_car_btn"
        app:layout_constraintStart_toStartOf="@+id/register_car_btn"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>